<resources>
    <string name="app_name">Absensi Project</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="display_name">Name</string>
    <string name="email">Email</string>
    <string name="create_a_new_acount">Create a New Acount</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string-array name="RoleUser">

        <item>Staff</item>
        <item>Monitoring</item>


    </string-array>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="anda_telah_melakukan_check_in_hari_ini">Anda Telah melakukan Check in hari ini</string>
</resources>
