<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/Theme.Design.Light.NoActionBar"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorWhitemuda"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <!-- LoginActivity progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/circlelogo"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/birumuda"
                app:civ_border_width="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Patuh OAT"
                android:textSize="24sp"
                android:textColor="@color/hitamflat"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColorLink="@color/colorPrimaryDark"
                    android:textColorHighlight="@color/colorPrimary"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimaryDark"
                    android:textColorHighlight="@color/colorPrimary"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/buttoncapsul"
                android:text="Login"
                android:layout_gravity="center"
                android:textColor="@color/hitamflat"
                android:textStyle="bold"/>
            <LinearLayout
                android:id="@+id/tvRegister"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account ?"
                    android:paddingTop="10dp"
                    android:layout_gravity="end"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/hitamflat"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"

                    android:text="Sign Up."
                    android:layout_marginStart="5dp"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="______________"/>



            <LinearLayout
                android:id="@+id/tvforgotpassword"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Your"
                    android:paddingTop="5dp"
                    android:layout_gravity="end"/>

                <TextView
                    android:id="@+id/forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/hitamflat"
                    android:layout_marginTop="2dp"
                    android:textSize="16sp"

                    android:text="password ?"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"></TextView>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>