<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="#fcfcfc">
    <android.support.design.widget.AppBarLayout
        android:layout_height="220dp"
        android:layout_width="match_parent"
        android:id="@+id/appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:weightSum="1">
        <android.support.design.widget.CollapsingToolbarLayout

            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:contentScrim="@color/colorPrimary"
            android:background="@drawable/patuhoatlogo"
            app:title="Absensi Project"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarid"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
                app:layout_collapseMode="parallax">

            </android.support.v7.widget.Toolbar>




        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="15dp"

                android:layout_marginTop="8dp"
                android:text="@string/create_a_new_acount"
                android:textColor="#000"
                android:textSize="14dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.104"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.778" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="3dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="3dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="8dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="8dp"
                    android:inputType="textPassword"

                    android:hint="@string/password"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="3dp"
                    android:hint="@string/display_name"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_jabatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="3dp"
                    android:hint="Jabatan"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_NIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="3dp"
                    android:hint="Nomor Induk Pegawai"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_no_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="8dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginStart="8dp"
                    android:inputType="number"
                    android:layout_marginTop="3dp"
                    android:hint="No Hp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="Alamat" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pilih Kategori Pengguna :"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="0dp"
                    android:textColor="@color/hitamflat"
                    android:textStyle="bold"
                    />
                <Spinner
                    android:layout_width="120dp"

                    android:layout_height="wrap_content"
                    android:id="@+id/regRole"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="40dp"
                    android:orientation="horizontal"
                    android:layout_gravity="right"
                    android:focusableInTouchMode="false"
                    >

                </Spinner>
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:text="Jenis Kelamin"
                android:textColor="@color/hitamflat"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/reg_JenisLK"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_password" />

            <RadioGroup
                android:id="@+id/reg_JenisLK"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_gravity="right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.599">

                <RadioButton
                    android:id="@+id/laki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="Laki-Laki"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/reg_password" />

                <RadioButton
                    android:id="@+id/perempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:text="Perempuan"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.339"
                    app:layout_constraintStart_toEndOf="@+id/laki"
                    app:layout_constraintTop_toBottomOf="@+id/reg_password" />
            </RadioGroup>




            <Button
                android:id="@+id/regist_btn"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/buttoncapsul"
                android:text="@string/register"
                android:layout_gravity="bottom|center_horizontal"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
